2006-05-25  Aidan Kehoe  <kehoea@parhasard.net>

	* file-coding.c (output_bytes_in_ascii_and_hex):
	I installed GCC 4.0 (which may not even have been necesssary,
	-pedantic might have done it) and it showed me that the problem my
	last commit intended to address was in eistr_ext rather than
	stderr_out.

2006-05-16  Andrey Slusar  <anrays@gmail.com>

	* objects-x.c (x_find_charset_font): Fix build with gcc 2.95.

2006-05-23  Aidan Kehoe  <kehoea@parhasard.net>

	* file-coding.c (output_bytes_in_ascii_and_hex):
	Fix a Win32 build failure introduced by my last commit. 
	
2006-05-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* .gdbinit.in: Moved to etc.
	* .dbxrc.in: Moved to etc.

2006-05-20  Stephen J. Turnbull  <stephen@xemacs.org>

	* tests.c (Ftest_data_format_conversion): Fix no-mule autodetect
	bugs.  Update FSF copyright.

2006-05-23  Aidan Kehoe  <kehoea@parhasard.net>

	* frame-x.c (x_set_frame_properties):
	Check that the frame is live and that the device is not being
	deleted before attempting anything.  Avoids calling X code if
	x_IO_error_handler has seen a broken pipe. 
	
2006-05-22  Aidan Kehoe  <kehoea@parhasard.net>

	* file-coding.c (output_bytes_in_ascii_and_hex):
	Pass stderr_out internally-formatted data, don't use an external
	format. 

2006-05-21  Aidan Kehoe  <kehoea@parhasard.net>

	* doc.c (extract_object_file_name):
	* doc.c (unparesseuxify_doc_string):
	Leave sufficient space for the '\0' sentinel when reading into the
	buffer.  The bug in unparesseuxify_doc_string had been there for
	ten years at least, but it was Fabrice Popineau's investigation of
	the code on the same model in extract_object_file_name that
	provoked its discovery.  Thank you Fabrice!
	
2006-05-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.27 "fiddleheads" is released.

2006-02-27  Joachim Schrod  <jschrod@acm.org>

	* mule-coding.c (iso2022_detect): Handle Latin-1 encoded files
	that have several high-byte chars in a row.
